add additional fields to email template and update email processing logic

--- a/custom-email.html
+++ b/custom-email.html
@@ -18,6 +18,10 @@
       <p><strong>警報等級：</strong> {rule_level} </p>
       <p><strong>代理名稱：</strong> {agent_name} </p>
       <p><strong>代理 ID：</strong> {agent_id} </p>
+      <p><strong>來源 IP：</strong> {src_ip} </p>
+      <p><strong>目標 IP：</strong> {dst_ip} </p>
+      <p><strong>簽章資訊：</strong> {sig_info} </p>
+      <p><strong>設備 ID：</strong> {device_id} </p>
     </div>
     <hr />
     <p style="font-size: small; color: gray">
